--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "author": "Arif Hidayat",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mqtt": "^4.2.1",
-    "mysql": "github:mysqljs/mysql"
+    "mysql": "github:mysqljs/mysql",
+    "mysql2": "^2.2.5",
+    "redis": "^3.0.2",
+    "validatorjs": "^3.21.0"
   }
 }
